# reflection

./: CMakeLists.txt  ReflectionConfig.cmake  reflection-config.cmake
Imp/: CMakeLists.txt
Include/: CMakeLists.txt  Initializable.hpp  Operator_Helpers.hpp  Reflection.hpp  Variables.hpp
Test/: CMakeLists.txt  Main.cpp
include/: CMakeLists.txt  initializable.hpp  operator_helpers.hpp  reflection.hpp  variables.hpp
test/: CMakeLists.txt  main.cpp
